--- a/public/style.css
+++ b/public/style.css
@@ -9,16 +9,24 @@
   src: url(blocky.woff);
 }
 .root {
-  padding-inline: 50px;
   overflow-x: hidden;
   position: relative;
   background-color: #f4f4f4;
+}
+.top{
+  padding: 2px;
+  text-align: center;
+  background-color: #0066ff;
+  color: white;
 }
 .banner {
   position: relative;
   width: 100%;
   z-index: 1;
-  height: 100vh;
+  height: 70vh;
+  background-image: url(banner.png);
+  background-size: contain;
+  background-color: #0066ff;
 }
 nav {
   width: 100%;
@@ -33,10 +41,15 @@ ul {
   list-style-type: none;
   justify-content: space-evenly;
 }
+.lsmall{
+  font-size: 0.4em;
+}
 .logo {
+  padding: 5px;
   font-family: blocky;
   font-size: 2em;
   letter-spacing: 5px;
+  line-height: 15px;
   font-weight: 100;
 }
 .right {
@@ -49,6 +62,7 @@ ul {
 .nav {
   display: flex;
   align-items: center;
+  background-color: white;
   justify-content: space-around;
 }
 .slider {
@@ -149,9 +163,28 @@ ul {
   font-weight: 100;
 }
 .body {
+  width: 100%;
+  flex-direction: column;
+  color: white;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
   display: flex;
   height: 100%;
 }
+
+@media (min-width:700px) {
+  .body h1{
+    margin: 10px 0;
+    font-size: 7vw;
+    text-align: center;
+  }
+  .body p{
+    width: 60%;
+    font-size: 1.5vw;
+  }
+}
+
 @font-face {
   font-family: pristina;
   src: url(PRISTINA.TTF);
@@ -168,6 +201,7 @@ ul {
   width: 60%;
   height: auto;
 }
+
 button {
   width: fit-content;
   font-size: 1.2em;
@@ -304,7 +338,32 @@ footer {
   background-color: #359af9;
   font-size: 1.5em;
 }
+.butns button{
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 15px 20px;
+}
+.butns a:last-child button{
+  background-color: #0026A2;
+  color: white;
+}
+.butns {
+display: flex;
+gap:40px;
+}
 @media (max-width: 700px) {
+  .top{
+    font-size: 0.7em;
+  }
+  .body h1{
+    margin: 5px 0;
+    font-size: 1.8rem;
+    text-align: center;
+  }
+  .body p{
+    width:100%;
+    font-size: 1rem;
+  }
   .process {
     gap: 10px;
     display: flex;
