--- a/style.css
+++ b/style.css
@@ -1,530 +1,1 @@
-* {
-  /* z-index: 1; */
-  font-family: sans-serif;
-}
-@font-face {
-  font-family: blocky;
-  src: url(blocky.otf);
-  src: url(blocky.ttf);
-  src: url(blocky.woff);
-}
-.root {
-  overflow-x: hidden;
-  position: relative;
-  background-color: #f4f4f4;
-}
-.top{
-  padding: 2px;
-  text-align: center;
-  background-color: #0066ff;
-  color: white;
-}
-.banner {
-  position: relative;
-  width: 100%;
-  z-index: 1;
-  height: 70vh;
-  background-image: url(banner.png);
-  background-size: contain;
-  background-color: #0066ff;
-}
-nav {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-ul {
-  width: 50%;
-  font-size: 1.5em;
-  display: flex;
-  list-style-type: none;
-  justify-content: space-evenly;
-}
-.lsmall{
-  font-size: 0.4em;
-}
-.logo {
-  padding: 5px;
-  font-family: blocky;
-  font-size: 2em;
-  letter-spacing: 5px;
-  line-height: 15px;
-  font-weight: 100;
-}
-.right {
-  /* width: 20%; */
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-size: 1.5em;
-}
-.nav {
-  display: flex;
-  align-items: center;
-  background-color: white;
-  justify-content: space-around;
-}
-.slider {
-  display: flex;
-  align-items: center;
-  width: 70px;
-  border-radius: 50px;
-  height: 30px;
-  background-color: black;
-}
-.triangle {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 0;
-  border: 50vw solid rgba(255, 0, 0, 0);
-  border-top: 50vh solid rgba(255, 0, 0, 0);
-  border-right: 50vw solid #359af9;
-  border-bottom: 50vh solid #359af9;
-  height: 0;
-}
-.heading {
-  margin: 0;
-  margin-left: 5%;
-  font-size: 2.2em;
-  margin-top: 20px;
-}
-.paragraph {
-  margin-left: 5%;
-  font-size: 1.3em;
-}
-.light {
-  font-weight: 100;
-}
-.circle {
-  float: right;
-  width: 25px;
-  height: 25px;
-  background-color: aliceblue;
-  border-radius: 50%;
-}
-.info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.values {
-  display: flex;
-  justify-content: center;
-  width: 90%;
-  align-items: center;
-}
-.v1 .circle {
-  box-shadow: 3px 5px 10px #7c7c7c;
-  width: 100px;
-  height: 100px;
-  background-color: #359af9;
-}
-.v1 p {
-  width: 70%;
-  text-align: center;
-}
-.v1 * {
-  margin: 5px;
-}
-.v1 {
-  width: 30%;
-  min-height: 200px;
-  display: flex;
-  text-align: left;
-  justify-content: space-around;
-  flex-direction: column;
-  align-items: center;
-}
-.BannerTitle {
-  height: 100%;
-  margin-top: 5%;
-  width: 50%;
-  height: min-content;
-  display: flex;
-  align-items: left;
-  padding-left: 10%;
-  justify-content: center;
-  flex-direction: column;
-}
-.BannerTitle * {
-  margin: 0;
-}
-.BannerTitle h1 {
-  font-size: 4.5em;
-}
-.BannerTitle h2 {
-  font-size: 3.5em;
-  font-weight: 100;
-}
-.BannerTitle p {
-  font-size: 1.3em;
-  font-weight: 100;
-}
-.body {
-  width: 100%;
-  flex-direction: column;
-  color: white;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  display: flex;
-  height: 100%;
-}
-
-@media (min-width:700px) {
-  .body h1{
-    margin: 10px 0;
-    font-size: 7vw;
-    text-align: center;
-  }
-  .body p{
-    width: 60%;
-    font-size: 1.5vw;
-  }
-}
-
-@font-face {
-  font-family: pristina;
-  src: url(PRISTINA.TTF);
-}
-.BannerImg {
-  margin-top: 5%;
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-.BannerImg img {
-  width: 60%;
-  height: auto;
-}
-
-button {
-  width: fit-content;
-  font-size: 1.2em;
-  box-shadow: 2px 5px 10px rgba(48, 48, 48, 0.404);
-  padding: 5px;
-  padding-inline: 20px;
-  border: none;
-  border-radius: 10px;
-}
-.stproject {
-  padding: 20px;
-  padding-inline: 25px;
-  background-color: #359af9;
-  color: white;
-  margin-top: 10%;
-  font-size: 1.2em;
-}
-.loginbtn {
-  font-size: 1em;
-  background-color: #ffffff;
-  border-radius: 5px;
-  color: black;
-}
-.blue {
-  color: #359af9;
-}
-.services {
-  gap: 20px;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-.card * {
-  margin: 5px;
-}
-.services .card {
-  padding: 20px;
-  border-radius: 8px;
-  width: 23%;
-  min-width: 200px;
-  text-align: center;
-  background-color: #359af966;
-  display: flex;
-  flex-direction: column;
-}
-
-.card img {
-  width: 30%;
-}
-.process .card img {
-  width: 25%;
-}
-.process {
-  gap: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 30px;
-  justify-content: space-evenly;
-  background-color: #e0e0e0;
-}
-
-.process .card {
-  width: 25%;
-  min-height: 170px;
-  padding: 5px;
-  background-color: white;
-  min-width: 200px;
-  border-radius: 5px;
-}
-.reachus {
-  display: flex;
-
-  flex-wrap: wrap;
-  width: 100%;
-  margin-bottom: 5px;
-  margin-top: 20px;
-  align-items: center;
-  justify-content: center;
-}
-nav ul li:hover {
-  color: #0084ff;
-}
-#menu {
-  user-select: none;
-  width: 30px;
-  cursor: pointer;
-  display: none;
-  height: 30px;
-}
-.reachus .info {
-  align-items: center;
-  width: 50%;
-  min-width: 300px;
-}
-ul a {
-  text-decoration: none;
-  color: black;
-  font-weight: normal;
-}
-.reachus .info h1 {
-  width: 100%;
-  text-align: left;
-  font-size: 3em;
-  margin: 0;
-  margin-top: 5px;
-}
-.contact {
-  width: 100%;
-}
-.contact > p {
-  width: 100% !important;
-  text-align: left;
-}
-.reachus .info p {
-  width: 100%;
-  text-align: left;
-  font-size: 1.2em;
-}
-.reachus .map {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 50%;
-}
-.map img {
-  width: 500px;
-  height: 300px;
-  max-width: 95%;
-  margin: 10px 0 10px 0;
-}
-footer {
-  color: white;
-  padding: 25px;
-  background-color: #359af9;
-  font-size: 1.5em;
-}
-.butns button{
-  cursor: pointer;
-  border-radius: 5px;
-  padding: 15px 20px;
-}
-.butns a:last-child button{
-  background-color: #0026A2;
-  color: white;
-}
-.butns {
-display: flex;
-gap:40px;
-}
-@media (max-width: 700px) {
-  .top{
-    font-size: 0.7em;
-  }
-  .body h1{
-    margin: 5px 0;
-    font-size: 1.8rem;
-    text-align: center;
-  }
-  .body p{
-    width:100%;
-    font-size: 1rem;
-  }
-  .process {
-    gap: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 5px;
-    justify-content: space-evenly;
-    background-color: #e0e0e0;
-  }
-  .process .card {
-    width: 90%;
-    min-height: 170px;
-    padding: 5px;
-    background-color: white;
-    min-width: 150px;
-    border-radius: 5px;
-  }
-  .heading {
-    margin: 0;
-    margin-left: 5%;
-    font-size: 1.7em;
-    margin-top: 20px;
-  }
-  .paragraph {
-    margin-left: 5%;
-    font-size: 1.1em;
-  }
-  .right {
-    flex-direction: row-reverse;
-  }
-  .root {
-    padding-inline: 0;
-  }
-  .banner {
-    height: 50vh;
-    overflow: hidden;
-  }
-  .reachus .info {
-    width: 90%;
-  }
-  .reachus .map {
-    width: 100%;
-  }
-  .triangle {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 0;
-    border: 50vw solid rgba(255, 0, 0, 0);
-    border-top: 25vh solid rgba(255, 0, 0, 0);
-    border-right: 50vw solid #359af9;
-    border-bottom: 25vh solid #359af9;
-    height: 0;
-  }
-  .BannerTitle {
-    padding-left: 0;
-    height: 50%;
-    align-items: center;
-    width: 100%;
-    margin: 0;
-  }
-  .BannerTitle h1 {
-    font-size: 2.2rem;
-  }
-  .BannerTitle h2 {
-    font-size: 1.7rem;
-  }
-  .BannerTitle p {
-    font-size: 1em;
-  }
-  #menu {
-    display: block;
-  }
-  .body {
-    flex-direction: column;
-  }
-  .stproject {
-    margin-top: 2px;
-    font-size: medium;
-    padding: 10px 20px;
-    box-shadow: 2px 3px 5px #444444;
-  }
-  .BannerImg {
-    margin: 0;
-    width: 100%;
-    justify-content: center;
-    align-items: unset;
-  }
-  .BannerImg img {
-    height: 50%;
-    width: auto;
-  }
-  .values {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 90%;
-    align-items: center;
-  }
-  .right {
-    width: 60%;
-  }
-  nav ul {
-    gap: 20px;
-    position: absolute;
-    width: 50%;
-    height: 30vh;
-    z-index: 999 !important;
-    transition: all 0.5s ease;
-    flex-direction: column;
-    background-color: #ffffff;
-    top: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    left: -100%;
-    border-radius: 5px;
-    padding-left: 50px;
-    font-size: 1rem;
-  }
-  nav ul.active {
-    left: 0;
-  }
-  .v1 .circle {
-    box-shadow: 3px 5px 10px #7c7c7c;
-    width: 80px;
-    height: 80px;
-    background-color: #359af9;
-  }
-  .v1 p {
-    width: 80%;
-    text-align: center;
-  }
-  .v1 * {
-    text-align: center;
-    margin: 5px;
-  }
-  .v1 {
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-  }
-  .services .card {
-    width: 80%;
-  }
-}
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #ffffff;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #164a7b;
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #175896;
-}
+nav ul,ul{list-style-type:none}.hero,header nav{height:fit-content}.info button,nav button{background-color:#ff6b00;color:#fff}html{scroll-behavior:smooth}@font-face{font-family:inter;src:url(font/inter.ttf)}.sold::before{content:"";background:url("sold.png") 0 0/25px 25px no-repeat;display:inline-block;width:25px;height:25px;margin:1px}body{margin:0;padding:0;font-family:inter}.root{display:flex;align-items:center;flex-direction:column;justify-content:center;width:100%;overflow:hidden;min-height:100vh;background-color:#f8f9ff}header,section.detail{align-items:center;width:100%}.hero,.hero .info1,footer{width:90%;display:flex}header{background-color:#0a0a0a;height:90vh;display:flex;background-image:url(img/bghead.png);overflow-y:hidden;color:#fff;flex-direction:column}header nav{width:80%;padding-top:2%;font-size:1.5rem;display:flex;justify-content:space-between;align-items:center}header nav .logo{font-size:1.2rem;display:flex;justify-content:space-between}ul{display:flex}.pp ul{gap:30px}.list a,.pp ul li a{color:#fff;text-decoration:none}nav ul{font-size:1.15rem;color:rgba(255,255,255,.9);display:flex;gap:40px}.hero{margin-top:5%;flex-direction:column;align-items:center;position:relative;justify-content:center}.hero .info1{justify-content:center;gap:1%;align-items:center}.hero .info1 .info{width:40%;align-self:first baseline}.hero .info1 .img,.w-card .info{width:50%}.info1 .img img{width:100%;border-radius:5px;border:3px solid #ff6b00;object-fit:contain}button{cursor:pointer;font-size:.9rem}nav button{padding:8px 15px;border:none;border-radius:50px}.info button{padding:10px 40px;border:none;border-radius:3px}main{width:100%}section.detail{display:flex;padding:5% 2%;justify-content:space-around;gap:1%}section.detail div.about{width:32%}section.detail div.about h2{font-size:2rem;font-weight:700;margin:5px}div.detail{align-items:center;width:60%;display:flex}div.detail h4{color:#ff6b00;margin:3px;font-size:1.25rem;font-weight:700}.d1{text-align:center}.d1 p{margin:10px 0 0}section.services{padding:5% 8%;flex-wrap:wrap;display:flex;gap:30px;justify-content:center;color:#fff;background-color:#0a0a0a}section.services .about{width:27%;transform:translateX(-30px)}section.services .about h3{font-size:1.8rem;margin:0}section.services .card{background-color:#fff;width:25%;display:flex;flex-direction:column;border-radius:1px;justify-content:center;gap:5%;color:#000;aspect-ratio:5/2.3;padding:8px}section.services .card h4{margin-left:5%}.card.active{background:#ff6b00!important;color:#fff!important}.card *,.pp *{margin:0}section.services .card img{width:40px}section.work{padding:2% 5%}section.work .w-card{display:flex;justify-content:space-around}.w-card b{color:#2b0000b1}.w-list{margin-top:3%;display:flex;flex-direction:column;align-items:center;justify-content:center}.w-list hr{margin:30px 0}.w-card img,footer .logo{width:40%}.w-card .info h3{font-size:2rem}.w-card .info p{font-size:1.1rem}.w-card .info a{color:#ff6b00;text-decoration:none;font-weight:700}.pp{margin:20px 0;font-size:1rem;display:flex;justify-content:space-between}.orange{color:#ff6b00}footer{color:#fff;background-color:#000;flex-direction:column;justify-content:space-between;padding:30px 0;padding-inline:5%}footer nav{justify-content:space-between;display:flex;margin:20px 5px}footer nav .list{align-self:last baseline;display:flex;width:50%;flex-direction:flex;justify-content:space-around}#menu a{text-decoration:none;color:#fff}.hide{display:none}@media (max-width:650px){.hero,footer nav{flex-direction:column}#menu a{width:95%;color:#000}.hero{align-items:center;justify-content:center;align-self:center;margin:10px}header{height:fit-content}header nav{align-items:center;justify-content:center;height:60px;position:relative;width:100%;z-index:9}header nav ul li{line-height:1.5rem;width:90%;padding:5px;margin-bottom:5px;cursor:pointer;border-bottom:1px solid rgba(0,0,0,.3)}.item img{width:20%}header nav .logo{position:absolute;z-index:99;align-items:center;top:0;line-height:60px;width:80%}header nav ul{display:none;align-items:center;padding:20px 0;margin:0;top:60px;z-index:1;gap:5px;position:absolute;width:100%;color:#262626;flex-direction:column;background-color:#f8f9ff}footer nav{align-items:center;width:90%}.contact-info,footer nav .logo,section.detail div.about,section.services .about{width:90%}.hero .info1 .img,.pp ul,.w-card .info,.w-card img{width:100%}footer nav .list{flex-direction:column;gap:10px;width:95%}nav .list a{width:90%;font-size:1.2rem;text-align:left}footer .pp{align-items:center;font-size:.9rem;flex-direction:column}.pp ul{display:flex;justify-content:space-between;padding-left:0;margin-top:10px;font-size:.9rem}#burger-menu{display:block!important}#menu button{display:block}.w-card{flex-wrap:wrap}section.services{padding:10%}section.services .card{width:100%;padding:10px}button.big,section.services .card:last-child{display:none}.hero .info1{flex-direction:column-reverse}.info1 .info{width:100%!important}section.detail{flex-direction:column;align-items:center}section.detail div.detail{width:90%;gap:3%}}#burger-menu{display:none;cursor:pointer;height:27px;width:27px;overflow:visible;position:relative;z-index:2}#burger-menu span,#burger-menu span:after,#burger-menu span:before{background:#fff;display:block;height:2px;opacity:1;position:absolute;transition:.3s ease-in-out}#burger-menu span:after,#burger-menu span:before{content:""}#burger-menu span:before{left:0;top:-10px;width:27px}#burger-menu span{right:0;top:13px;width:27px}#burger-menu span:after{left:0;top:10px;width:27px}#burger-menu.close span:before{top:0;transform:rotate(90deg);width:27px}#burger-menu.close span{transform:rotate(-45deg);top:13px;width:27px}#burger-menu.close span:after{top:0;left:0;transform:rotate(90deg);opacity:0;width:0}@media (min-width:651px){header nav ul{display:flex!important}}
