--- a/style.css
+++ b/style.css
@@ -1,1 +1,572 @@
-nav ul,ul{list-style-type:none}.hero,header nav{height:fit-content}.info button,nav button{background-color:#ff6b00;color:#fff}html{scroll-behavior:smooth}@font-face{font-family:inter;src:url(font/inter.ttf)}.sold::before{content:"";background:url("sold.png") 0 0/25px 25px no-repeat;display:inline-block;width:25px;height:25px;margin:1px}body{margin:0;padding:0;font-family:inter}.root{display:flex;align-items:center;flex-direction:column;justify-content:center;width:100%;overflow:hidden;min-height:100vh;background-color:#f8f9ff}header,section.detail{align-items:center;width:100%}.hero,.hero .info1,footer{width:90%;display:flex}header{background-color:#0a0a0a;height:90vh;display:flex;background-image:url(img/bghead.png);overflow-y:hidden;color:#fff;flex-direction:column}header nav{width:80%;padding-top:2%;font-size:1.5rem;display:flex;justify-content:space-between;align-items:center}header nav .logo{font-size:1.2rem;display:flex;justify-content:space-between}ul{display:flex}.pp ul{gap:30px}.list a,.pp ul li a{color:#fff;text-decoration:none}nav ul{font-size:1.15rem;color:rgba(255,255,255,.9);display:flex;gap:40px}.hero{margin-top:5%;flex-direction:column;align-items:center;position:relative;justify-content:center}.hero .info1{justify-content:center;gap:1%;align-items:center}.hero .info1 .info{width:40%;align-self:first baseline}.hero .info1 .img,.w-card .info{width:50%}.info1 .img img{width:100%;border-radius:5px;border:3px solid #ff6b00;object-fit:contain}button{cursor:pointer;font-size:.9rem}nav button{padding:8px 15px;border:none;border-radius:50px}.info button{padding:10px 40px;border:none;border-radius:3px}main{width:100%}section.detail{display:flex;padding:5% 2%;justify-content:space-around;gap:1%}section.detail div.about{width:32%}section.detail div.about h2{font-size:2rem;font-weight:700;margin:5px}div.detail{align-items:center;width:60%;display:flex}div.detail h4{color:#ff6b00;margin:3px;font-size:1.25rem;font-weight:700}.d1{text-align:center}.d1 p{margin:10px 0 0}section.services{padding:5% 8%;flex-wrap:wrap;display:flex;gap:30px;justify-content:center;color:#fff;background-color:#0a0a0a}section.services .about{width:27%;transform:translateX(-30px)}section.services .about h3{font-size:1.8rem;margin:0}section.services .card{background-color:#fff;width:25%;display:flex;flex-direction:column;border-radius:1px;justify-content:center;gap:5%;color:#000;aspect-ratio:5/2.3;padding:8px}section.services .card h4{margin-left:5%}.card.active{background:#ff6b00!important;color:#fff!important}.card *,.pp *{margin:0}section.services .card img{width:40px}section.work{padding:2% 5%}section.work .w-card{display:flex;justify-content:space-around}.w-card b{color:#2b0000b1}.w-list{margin-top:3%;display:flex;flex-direction:column;align-items:center;justify-content:center}.w-list hr{margin:30px 0}.w-card img,footer .logo{width:40%}.w-card .info h3{font-size:2rem}.w-card .info p{font-size:1.1rem}.w-card .info a{color:#ff6b00;text-decoration:none;font-weight:700}.pp{margin:20px 0;font-size:1rem;display:flex;justify-content:space-between}.orange{color:#ff6b00}footer{color:#fff;background-color:#000;flex-direction:column;justify-content:space-between;padding:30px 0;padding-inline:5%}footer nav{justify-content:space-between;display:flex;margin:20px 5px}footer nav .list{align-self:last baseline;display:flex;width:50%;flex-direction:flex;justify-content:space-around}#menu a{text-decoration:none;color:#fff}.hide{display:none}@media (max-width:650px){.hero,footer nav{flex-direction:column}#menu a{width:95%;color:#000}.hero{align-items:center;justify-content:center;align-self:center;margin:10px}header{height:fit-content}header nav{align-items:center;justify-content:center;height:60px;position:relative;width:100%;z-index:9}header nav ul li{line-height:1.5rem;width:90%;padding:5px;margin-bottom:5px;cursor:pointer;border-bottom:1px solid rgba(0,0,0,.3)}.item img{width:20%}header nav .logo{position:absolute;z-index:99;align-items:center;top:0;line-height:60px;width:80%}header nav ul{display:none;align-items:center;padding:20px 0;margin:0;top:60px;z-index:1;gap:5px;position:absolute;width:100%;color:#262626;flex-direction:column;background-color:#f8f9ff}footer nav{align-items:center;width:90%}.contact-info,footer nav .logo,section.detail div.about,section.services .about{width:90%}.hero .info1 .img,.pp ul,.w-card .info,.w-card img{width:100%}footer nav .list{flex-direction:column;gap:10px;width:95%}nav .list a{width:90%;font-size:1.2rem;text-align:left}footer .pp{align-items:center;font-size:.9rem;flex-direction:column}.pp ul{display:flex;justify-content:space-between;padding-left:0;margin-top:10px;font-size:.9rem}#burger-menu{display:block!important}#menu button{display:block}.w-card{flex-wrap:wrap}section.services{padding:10%}section.services .card{width:100%;padding:10px}button.big,section.services .card:last-child{display:none}.hero .info1{flex-direction:column-reverse}.info1 .info{width:100%!important}section.detail{flex-direction:column;align-items:center}section.detail div.detail{width:90%;gap:3%}}#burger-menu{display:none;cursor:pointer;height:27px;width:27px;overflow:visible;position:relative;z-index:2}#burger-menu span,#burger-menu span:after,#burger-menu span:before{background:#fff;display:block;height:2px;opacity:1;position:absolute;transition:.3s ease-in-out}#burger-menu span:after,#burger-menu span:before{content:""}#burger-menu span:before{left:0;top:-10px;width:27px}#burger-menu span{right:0;top:13px;width:27px}#burger-menu span:after{left:0;top:10px;width:27px}#burger-menu.close span:before{top:0;transform:rotate(90deg);width:27px}#burger-menu.close span{transform:rotate(-45deg);top:13px;width:27px}#burger-menu.close span:after{top:0;left:0;transform:rotate(90deg);opacity:0;width:0}@media (min-width:651px){header nav ul{display:flex!important}}
+nav ul,
+ul {
+    list-style-type: none
+}
+
+.hero,
+header nav {
+    height: fit-content
+}
+
+.info button,
+nav button {
+    background-color: #ff6b00;
+    color: #fff
+}
+
+html {
+    scroll-behavior: smooth
+}
+
+@font-face {
+    font-family: inter;
+    src: url(font/inter.ttf)
+}
+
+.sold::before {
+    content: "";
+    background: url("sold.png") 0 0/25px 25px no-repeat;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    margin: 1px
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: inter
+}
+
+.root {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    overflow: hidden;
+    min-height: 100vh;
+    background-color: #f8f9ff
+}
+
+header,
+section.detail {
+    align-items: center;
+    width: 100%
+}
+
+.hero,
+.hero .info1,
+footer {
+    width: 90%;
+    display: flex
+}
+
+header {
+    background-color: #0a0a0a;
+    height: 90vh;
+    display: flex;
+    background-image: url(img/bghead.png);
+    overflow-y: hidden;
+    color: #fff;
+    flex-direction: column
+}
+
+header nav {
+    width: 80%;
+    padding-top: 2%;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+}
+
+header nav .logo {
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: space-between
+}
+
+ul {
+    display: flex
+}
+
+.pp ul {
+    gap: 30px
+}
+
+.list a,
+.pp ul li a {
+    color: #fff;
+    text-decoration: none
+}
+
+nav ul {
+    font-size: 1.15rem;
+    color: rgba(255, 255, 255, .9);
+    display: flex;
+    gap: 40px
+}
+
+.hero {
+    margin-top: 5%;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    justify-content: center
+}
+
+.hero .info1 {
+    justify-content: center;
+    gap: 1%;
+    align-items: center
+}
+
+.hero .info1 .info {
+    width: 40%;
+    align-self: first baseline
+}
+
+.hero .info1 .img,
+.w-card .info {
+    width: 50%
+}
+
+.info1 .img img {
+    width: 100%;
+    border-radius: 5px;
+    border: 3px solid #ff6b00;
+    object-fit: contain
+}
+
+button {
+    cursor: pointer;
+    font-size: .9rem
+}
+
+nav button {
+    padding: 8px 15px;
+    border: none;
+    border-radius: 50px
+}
+
+.info button {
+    padding: 10px 40px;
+    border: none;
+    border-radius: 3px
+}
+
+main {
+    width: 100%
+}
+
+section.detail {
+    display: flex;
+    padding: 5% 2%;
+    justify-content: space-around;
+    gap: 1%
+}
+
+section.detail div.about {
+    width: 32%
+}
+
+section.detail div.about h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    margin: 5px
+}
+
+div.detail {
+    align-items: center;
+    width: 60%;
+    display: flex
+}
+
+div.detail h4 {
+    color: #ff6b00;
+    margin: 3px;
+    font-size: 1.25rem;
+    font-weight: 700
+}
+
+.d1 {
+    text-align: center
+}
+
+.d1 p {
+    margin: 10px 0 0
+}
+
+section.services {
+    padding: 5% 8%;
+    flex-wrap: wrap;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    color: #fff;
+    background-color: #0a0a0a
+}
+
+section.services .about {
+    width: 27%;
+    transform: translateX(-30px)
+}
+
+section.services .about h3 {
+    font-size: 1.8rem;
+    margin: 0
+}
+
+section.services .card {
+    background-color: #fff;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 1px;
+    justify-content: center;
+    gap: 5%;
+    transition: all 0.5s ease;
+    color: #000;
+    aspect-ratio: 5/2.3;
+    padding: 8px
+}
+section.services .card:hover{
+    scale: 0.95;
+    
+    user-select: none;
+}
+
+section.services .card h4 {
+    margin-left: 5%
+}
+
+.card.active {
+    background: #ff6b00 !important;
+    color: #fff !important
+}
+
+.card *,
+.pp * {
+    margin: 0
+}
+
+section.services .card img {
+    width: 40px
+}
+
+section.work {
+    padding: 2% 5%
+}
+
+section.work .w-card {
+    display: flex;
+    justify-content: space-around
+}
+
+.w-card b {
+    color: #2b0000b1
+}
+
+.w-list {
+    margin-top: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
+}
+
+.w-list hr {
+    margin: 30px 0
+}
+
+.w-card img,
+footer .logo {
+    width: 40%
+}
+
+.w-card .info h3 {
+    font-size: 2rem
+}
+
+.w-card .info p {
+    font-size: 1.1rem
+}
+
+.w-card .info a {
+    color: #ff6b00;
+    text-decoration: none;
+    font-weight: 700
+}
+
+.pp {
+    margin: 20px 0;
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-between
+}
+
+.orange {
+    color: #ff6b00
+}
+
+footer {
+    color: #fff;
+    background-color: #000;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px 0;
+    padding-inline: 5%
+}
+
+footer nav {
+    justify-content: space-between;
+    display: flex;
+    margin: 20px 5px
+}
+
+footer nav .list {
+    align-self: last baseline;
+    display: flex;
+    width: 50%;
+    flex-direction: flex;
+    justify-content: space-around
+}
+
+#menu a {
+    text-decoration: none;
+    color: #fff
+}
+
+.hide {
+    display: none
+}
+
+@media (max-width:650px) {
+
+    .hero,
+    footer nav {
+        flex-direction: column
+    }
+
+    #menu a {
+        width: 95%;
+        color: #000
+    }
+
+    .hero {
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        margin: 10px
+    }
+
+    header {
+        height: fit-content
+    }
+
+    header nav {
+        align-items: center;
+        justify-content: center;
+        height: 60px;
+        position: relative;
+        width: 100%;
+        z-index: 9
+    }
+
+    header nav ul li {
+        line-height: 1.5rem;
+        width: 90%;
+        padding: 5px;
+        margin-bottom: 5px;
+        cursor: pointer;
+        border-bottom: 1px solid rgba(0, 0, 0, .3)
+    }
+
+    .item img {
+        width: 20%
+    }
+
+    header nav .logo {
+        position: absolute;
+        z-index: 99;
+        align-items: center;
+        top: 0;
+        line-height: 60px;
+        width: 80%
+    }
+
+    header nav ul {
+        display: none;
+        align-items: center;
+        padding: 20px 0;
+        margin: 0;
+        top: 60px;
+        z-index: 1;
+        gap: 5px;
+        position: absolute;
+        width: 100%;
+        color: #262626;
+        flex-direction: column;
+        background-color: #f8f9ff
+    }
+
+    footer nav {
+        align-items: center;
+        width: 90%
+    }
+
+    .contact-info,
+    footer nav .logo,
+    section.detail div.about,
+    section.services .about {
+        width: 90%
+    }
+
+    .hero .info1 .img,
+    .pp ul,
+    .w-card .info,
+    .w-card img {
+        width: 100%
+    }
+
+    footer nav .list {
+        flex-direction: column;
+        gap: 10px;
+        width: 95%
+    }
+
+    nav .list a {
+        width: 90%;
+        font-size: 1.2rem;
+        text-align: left
+    }
+
+    footer .pp {
+        align-items: center;
+        font-size: .9rem;
+        flex-direction: column
+    }
+
+    .pp ul {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 0;
+        margin-top: 10px;
+        font-size: .9rem
+    }
+
+    #burger-menu {
+        display: block !important
+    }
+
+    #menu button {
+        display: block
+    }
+
+    .w-card {
+        flex-wrap: wrap
+    }
+
+    section.services {
+        padding: 10%
+    }
+
+    section.services .card {
+        width: 100%;
+        padding: 10px
+    }
+
+    button.big,
+    section.services .card:last-child {
+        display: none
+    }
+
+    .hero .info1 {
+        flex-direction: column-reverse
+    }
+
+    .info1 .info {
+        width: 100% !important
+    }
+
+    section.detail {
+        flex-direction: column;
+        align-items: center
+    }
+
+    section.detail div.detail {
+        width: 90%;
+        gap: 3%
+    }
+}
+
+#burger-menu {
+    display: none;
+    cursor: pointer;
+    height: 27px;
+    width: 27px;
+    overflow: visible;
+    position: relative;
+    z-index: 2
+}
+
+#burger-menu span,
+#burger-menu span:after,
+#burger-menu span:before {
+    background: #fff;
+    display: block;
+    height: 2px;
+    opacity: 1;
+    position: absolute;
+    transition: .3s ease-in-out
+}
+
+#burger-menu span:after,
+#burger-menu span:before {
+    content: ""
+}
+
+#burger-menu span:before {
+    left: 0;
+    top: -10px;
+    width: 27px
+}
+
+#burger-menu span {
+    right: 0;
+    top: 13px;
+    width: 27px
+}
+
+#burger-menu span:after {
+    left: 0;
+    top: 10px;
+    width: 27px
+}
+
+#burger-menu.close span:before {
+    top: 0;
+    transform: rotate(90deg);
+    width: 27px
+}
+
+#burger-menu.close span {
+    transform: rotate(-45deg);
+    top: 13px;
+    width: 27px
+}
+
+#burger-menu.close span:after {
+    top: 0;
+    left: 0;
+    transform: rotate(90deg);
+    opacity: 0;
+    width: 0
+}
+
+@media (min-width:651px) {
+    header nav ul {
+        display: flex !important
+    }
+}
